# rhea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  conanfile.txt
doc/: .syntax-notes.md.swo  ast-nodes.txt  rosetta-examples.md  syntax-notes.md
include/: ast.hpp  compat.hpp  grammar.hpp  state.hpp
include/ast/: builder.hpp  error.hpp  nodes.hpp  parse_tree_node.hpp  selector.hpp  transform.hpp
include/ast/internal/: builder.hpp
include/ast/nodes/: binary_operator.hpp  concept.hpp  control_statement.hpp  exception.hpp  function.hpp  identifiers.hpp  literals.hpp  module.hpp  node_base.hpp  numeric.hpp  simple_statement.hpp  structure_type.hpp  ternary_operator.hpp  typenames.hpp  unary_operator.hpp
include/ast/transform/: binary_operator.hpp  discard_subtree.hpp  else_block.hpp  postfix_operator.hpp  ternary_operator.hpp  typecheck_operator.hpp  unary_operator.hpp
include/codegen/: allocation_manager.hpp  code_visitor.hpp  function_visitor.hpp  generator.hpp  generator_fwd.hpp  type_convert.hpp
include/debug/: build_asm.hpp  build_ast.hpp  build_ir.hpp  parse_tree.hpp
include/grammar/: concepts.hpp  expression.hpp  expression_fwd.hpp  keywords.hpp  module.hpp  operator.hpp  operators.hpp  selector.hpp  statement.hpp  strings.hpp  tokens.hpp  typenames.hpp
include/inference/: engine.hpp  engine_fwd.hpp  lazy_type.hpp  visitor.hpp
include/state/: module_node.hpp  module_tree.hpp  symbol.hpp  types.hpp
include/types/: declaration.hpp  mapper.hpp  name_mangle.hpp  to_string.hpp  types.hpp
include/util/: compat.hpp  downcast.hpp  serialize_array.hpp  symbol_hash.hpp
include/visitor/: default.hpp  visitor.hpp  visitor_fwd.hpp
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  binary_operator.cpp  builder.cpp  concept.cpp  control_statement.cpp  exception.cpp  function.cpp  identifiers.cpp  module.cpp  simple_statement.cpp  structure_type.cpp  typenames.cpp  unary_operator.cpp  visitor_impl.cpp
src/codegen/: CMakeLists.txt  allocation_manager.cpp  code_visitor.cpp  function_visitor.cpp  generator.cpp  type_convert.cpp
src/debug/: asm.cpp  ast.cpp  ir.cpp  parse.cpp
src/inference/: CMakeLists.txt  engine.cpp  visitor.cpp
src/state/: CMakeLists.txt  module_node.cpp  module_tree.cpp  symbol.cpp
src/types/: CMakeLists.txt  mapper.cpp  name_mangle.cpp  types.cpp
src/util/: CMakeLists.txt  symbol_hash.cpp
tests/: CMakeLists.txt  main.cpp
tests/ast/: CMakeLists.txt  builder.cpp  concept.cpp  control_statement.cpp  exception.cpp  function.cpp  identifiers.cpp  literals.cpp  module.cpp  numeric.cpp  operators.cpp  simple_statement.cpp  structure_type.cpp  test_setup.cpp  test_setup.hpp  typenames.cpp  visitor.cpp
tests/codegen/: CMakeLists.txt  binary_op.cpp  definitions.cpp  function_visitor.cpp  literals.cpp  startup.cpp  test_setup.cpp  test_setup.hpp
tests/grammar/: CMakeLists.txt  concepts.cpp  expression.cpp  module.cpp  operators.cpp  statement.cpp  strings.cpp  test_setup.hpp  tokens.cpp  typenames.cpp
tests/inference/: CMakeLists.txt  engine.cpp
tests/types/: CMakeLists.txt  mapper.cpp  name_mangle.cpp  test_setup.cpp  to_string.cpp  types.cpp
